--- a/style.css
+++ b/style.css
@@ -8,3 +8,12 @@ canvas {
   margin-top: 10px;
   border: 2px solid black;
 }
+button{
+  outline-color: red;
+  background:orangered;
+  font-size: large;
+  width: 120px;
+  height: 40px;
+  border-radius: 11px;
+  
+}
